Fix issues with Minio Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,16 @@ services:
       context: .
       dockerfile: ./dev/minio.Dockerfile
       args:
-        MINIO_BACKEND_DIR: /data
+        MINIO_BACKEND_DIR: /var/lib/minio
+        MINIO_ACCESS_KEY: minioAdminAccessKey
+        MINIO_SECRET_KEY: minioAdminSecretKey
         MINIO_USER_ACCESS_KEY: djangoAccessKey
         MINIO_USER_SECRET_KEY: djangoSecretKey
-    command: ["server", "/data"]
+    command: ["server", "/var/lib/minio"]
     environment:
       MINIO_ACCESS_KEY: minioAdminAccessKey
       MINIO_SECRET_KEY: minioAdminSecretKey
     volumes:
-      - /data
+      - /var/lib/minio
     ports:
       - ${DOCKER_MINIO_PORT-9000}:9000
