--- a/{{ cookiecutter.project_slug }}/docker-compose.override.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.override.yml
@@ -21,7 +21,7 @@ services:
       dockerfile: ./dev/django.Dockerfile
     command: [
       "celery", "worker",
-      "--app", "{{ pkg_name }}.celery",
+      "--app", "{{ cookiecutter.pkg_name }}.celery",
       "--loglevel", "info",
       "--without-heartbeat"
     ]
