Add Pytest testing configuration

--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -34,6 +34,22 @@ deps =
 commands =
     black {posargs:.}
 
+[testenv:test]
+passenv =
+    DJANGO_CELERY_BROKER_URL
+    DJANGO_DATABASE_URL
+    DJANGO_MINIO_STORAGE_ACCESS_KEY
+    DJANGO_MINIO_STORAGE_ENDPOINT
+    DJANGO_MINIO_STORAGE_SECRET_KEY
+deps =
+    factory_boy
+    pytest
+    pytest-django
+    pytest-factoryboy
+    pytest-mock
+commands =
+    pytest {posargs}
+
 [flake8]
 max-line-length = 100
 show-source = True
@@ -52,4 +68,5 @@ ignore =
 
 [pytest]
 DJANGO_SETTINGS_MODULE = {{ cookiecutter.pkg_name }}.settings
-DJANGO_CONFIGURATION = DevelopmentConfiguration
+DJANGO_CONFIGURATION = TestingConfiguration
+addopts = --strict-markers --showlocals --verbose
