--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,15 @@ jobs:
   test:
     docker:
       - image: circleci/python:3.8
+      - image: circleci/postgres:12-ram
+        environment:
+          POSTGRES_DB: django
+          POSTGRES_PASSWORD: postgres
+      - image: minio/minio:latest
+        command: server /data
+        environment:
+          MINIO_ACCESS_KEY: minioAdminAccessKey
+          MINIO_SECRET_KEY: minioAdminSecretKey
     steps:
       - checkout
       - run:
@@ -15,6 +24,11 @@ jobs:
       - run:
           name: Run tox tests from new project
           command: tox
+          environment:
+            DJANGO_DATABASE_URL: postgres://postgres:postgres@localhost:5432/django
+            DJANGO_MINIO_STORAGE_ENDPOINT: localhost:9000
+            DJANGO_MINIO_STORAGE_ACCESS_KEY: minioAdminAccessKey
+            DJANGO_MINIO_STORAGE_SECRET_KEY: minioAdminSecretKey
           working_directory: my-new-project
 workflows:
   version: 2
