--- a/{{ cookiecutter.project_slug }}/dev/.env.docker-compose
+++ b/{{ cookiecutter.project_slug }}/dev/.env.docker-compose
@@ -5,3 +5,4 @@ DJANGO_MINIO_STORAGE_ENDPOINT=minio:9000
 DJANGO_MINIO_STORAGE_ACCESS_KEY=minioUserAccessKey
 DJANGO_MINIO_STORAGE_SECRET_KEY=minioUserSecretKey
 DJANGO_STORAGE_BUCKET_NAME=django-storage
+DJANGO_MINIO_STORAGE_MEDIA_URL=http://localhost:9000/django-storage
