--- a/{{ cookiecutter.project_slug }}/docker-compose.override.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.override.yml
@@ -5,6 +5,8 @@ services:
       context: .
       dockerfile: ./dev/django.Dockerfile
     command: ["./manage.py", "runserver", "0.0.0.0:8000"]
+    # Log printing via Rich is enhanced by a TTY
+    tty: true
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django
@@ -25,6 +27,8 @@ services:
       "--loglevel", "info",
       "--without-heartbeat"
     ]
+    # Docker Compose does not set the TTY width, which causes Celery errors
+    tty: false
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django
