Fix an isort + Docker-Compose bug by mounting code at a different path

--- a/{{ cookiecutter.project_slug }}/docker-compose.override.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.override.yml
@@ -9,7 +9,7 @@ services:
     tty: true
     env_file: ./dev/.env.docker-compose
     volumes:
-      - .:/opt/django
+      - .:/opt/django-project
     ports:
       - 8000:8000
     depends_on:
@@ -31,7 +31,7 @@ services:
     tty: false
     env_file: ./dev/.env.docker-compose
     volumes:
-      - .:/opt/django
+      - .:/opt/django-project
     depends_on:
       - postgres
       - rabbitmq
