--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -65,6 +65,14 @@ ignore =
     W503,
     # Missing docstring in *
     D10,
+exclude =
+    .git,
+    __pycache__,
+    .tox,
+    .eggs,
+    *.egg,
+    # Extend the default excludes to add node_modules
+    node_modules,
 
 [pytest]
 DJANGO_SETTINGS_MODULE = {{ cookiecutter.pkg_name }}.settings
