--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,11 @@ jobs:
         environment:
           POSTGRES_DB: django
           POSTGRES_PASSWORD: postgres
-      - image: girder/minio-nonroot:latest
+      - image: minio/minio:latest
+        command: server /data
+        environment:
+          MINIO_ACCESS_KEY: minioAccessKey
+          MINIO_SECRET_KEY: minioSecretKey
     steps:
       - checkout
       - run:
@@ -23,8 +27,8 @@ jobs:
           environment:
             DJANGO_DATABASE_URL: postgres://postgres:postgres@localhost:5432/django
             DJANGO_MINIO_STORAGE_ENDPOINT: localhost:9000
-            DJANGO_MINIO_STORAGE_ACCESS_KEY: minioUserAccessKey
-            DJANGO_MINIO_STORAGE_SECRET_KEY: minioUserSecretKey
+            DJANGO_MINIO_STORAGE_ACCESS_KEY: minioAccessKey
+            DJANGO_MINIO_STORAGE_SECRET_KEY: minioSecretKey
           working_directory: my-new-project
 workflows:
   version: 2
