Address linting issues with the minimal install

--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -50,8 +50,10 @@ deps =
     pytest-django
     pytest-factoryboy
     pytest-mock
+    # Note: implements --suppress-no-test-exit-code. Pass if there are no tests.
+    pytest-custom_exit_code
 commands =
-    pytest {posargs}
+    pytest --suppress-no-test-exit-code {posargs}
 
 [flake8]
 max-line-length = 100
