--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     lint,
-    test,
+    {% if cookiecutter.include_example_code != 'Y' %}# {% endif -%}test,
 
 [testenv:lint]
 skipsdist = true
@@ -50,10 +50,8 @@ deps =
     pytest-django
     pytest-factoryboy
     pytest-mock
-    # Note: implements --suppress-no-test-exit-code. Pass if there are no tests.
-    pytest-custom_exit_code
 commands =
-    pytest --suppress-no-test-exit-code {posargs}
+    pytest {posargs}
 
 [flake8]
 max-line-length = 100
