--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,10 @@ jobs:
           name: Install Python packages
           command: sudo pip install cookiecutter tox
       - run:
-          name: Create from cookiecutter with example_models="no"
-          command: cookiecutter --no-input . example_models="no"
+          name: Create from cookiecutter with include_example_code="no"
+          command: cookiecutter --no-input . include_example_code="no"
       - run:
-          name: Run tox tests from new project with example_models="no"
+          name: Run tox tests from new project with include_example_code="no"
           command: tox
           environment:
             DJANGO_DATABASE_URL: postgres://postgres:postgres@localhost:5432/django
