Use clearer choice values for include_example_code
This is a purely internal change.

--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     lint,
-    {% if cookiecutter.include_example_code != 'Y' %}# {% endif -%}test,
+    {% if cookiecutter.include_example_code != 'yes' %}# {% endif -%}test,
 
 [testenv:lint]
 skipsdist = true
