--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     lint,
     {% if cookiecutter.include_example_code != 'yes' %}# {% endif -%}test,
+    check-migrations,
 
 [testenv:lint]
 skipsdist = true
@@ -52,6 +53,18 @@ deps =
     pytest-mock
 commands =
     pytest {posargs}
+
+[testenv:check-migrations]
+setenv =
+    DJANGO_CONFIGURATION = TestingConfiguration
+passenv =
+    DJANGO_CELERY_BROKER_URL
+    DJANGO_DATABASE_URL
+    DJANGO_MINIO_STORAGE_ACCESS_KEY
+    DJANGO_MINIO_STORAGE_ENDPOINT
+    DJANGO_MINIO_STORAGE_SECRET_KEY
+commands =
+    {envpython} ./manage.py makemigrations --check --dry-run
 
 [flake8]
 max-line-length = 100
