--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cookiecutter-variables: ["include_example_code=y", "include_example_code=n"]
+        cookiecutter-variables: ["include_example_code=yes", "include_example_code=no"]
     services:
       postgres:
         image: postgres:latest
