Ignore upstream package warnings from Django 3.2

--- a/{{ cookiecutter.project_slug }}/tox.ini
+++ b/{{ cookiecutter.project_slug }}/tox.ini
@@ -88,6 +88,7 @@ DJANGO_SETTINGS_MODULE = {{ cookiecutter.pkg_name }}.settings
 DJANGO_CONFIGURATION = TestingConfiguration
 addopts = --strict-markers --showlocals --verbose
 filterwarnings =
+    ignore:.*default_app_config*.:django.utils.deprecation.RemovedInDjango41Warning
     ignore::DeprecationWarning:minio
     ignore::DeprecationWarning:configurations
     ignore::django.utils.deprecation.RemovedInDjango40Warning:oauth2_provider
