--- a/{{ cookiecutter.project_slug }}/.github/workflows/ci.yml
+++ b/{{ cookiecutter.project_slug }}/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - {{ cookiecutter.default_branch }}
   schedule:
     - cron: "0 0 * * *"
 jobs:
