--- a/{{ cookiecutter.project_slug }}/docker-compose.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     ports:
       - ${DOCKER_RABBITMQ_PORT-5672}:5672
       - ${DOCKER_RABBITMQ_CONSOLE_PORT-15672}:15672
+    volumes:
+      - rabbitmq:/var/lib/rabbitmq/mnesia
 
   minio:
     image: minio/minio:latest
@@ -33,3 +35,4 @@ services:
 volumes:
   postgres:
   minio:
+  rabbitmq:
