--- a/{{ cookiecutter.project_slug }}/docker-compose.override.yml
+++ b/{{ cookiecutter.project_slug }}/docker-compose.override.yml
@@ -14,7 +14,7 @@ services:
       - 8000:8000
     depends_on:
       - postgres
-      - rabbitmq
+      - redis
       - minio
 
   celery:
@@ -35,5 +35,5 @@ services:
       - .:/opt/django-project
     depends_on:
       - postgres
-      - rabbitmq
+      - redis
       - minio
